--- a/cenik.html
+++ b/cenik.html
@@ -8,8 +8,8 @@
 
     <title></title>
 
-    <link rel="stylesheet" href="css/style.css"/>
-    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="/css/style.css"/>
+    <link rel="stylesheet" href="/css/normalize.css">
 
     <style>
         
