--- a/cenik.html
+++ b/cenik.html
@@ -8,9 +8,11 @@
 
     <title></title>
 
-    <link rel="stylesheet" href="/css/style.css"/>
-    <link rel="stylesheet" href="/css/normalize.css">
-
+    <link rel="stylesheet" href="css/style.css"/>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/font.css">
+</head>
     <style>
         
     </style>
@@ -182,4 +184,9 @@
         <div footerSignature>
             <a class="marathonSign" href="#">Webdesign Marahon Studio</a>
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.cycle2/2.1.6/jquery.cycle2.pager.min.js"></script> -->
+<script type="text/JavaScript" src="../js/main.js"></script>
 </body>
