index.html and style.css updated

--- a/index.html
+++ b/index.html
@@ -168,12 +168,14 @@
 
 <section class="insuranceLogoSec">
     <div class="insuranceLogo">
+        <div class="insuranceLogoContainer">
         <img src="img/VZP.svg" alt="Všeobecná zdravotní pojišťovna" title="Všeobecná zdravotní pojišťovna">
         <img src="img/VOZP.svg" alt="Vojenská zdravotní pojišťovna" title="Vojenská zdravotní pojišťovna">
         <img src="img/Čpzp.svg" alt="Česká průmyslová zdravotní pojišťovna" title="Česká průmyslová zdravotní pojišťovna">
         <img src="img/OZP.svg" alt="Oborová zdravotní pojišťovna" title="Oborová zdravotní pojišťovna">
         <img src="img/zpmv.svg" alt="Zdravotní pojišťovna ministerstva vnitra" title="Zdravotní pojišťovna ministerstva vnitra">
         <img src="img/RBP.svg" alt="RBP, zdravotní pojišťovna" title="RBP, zdravotní pojišťovna">
+        </div>
     </div>
 </section>
 
