--- a/index.html
+++ b/index.html
@@ -193,7 +193,9 @@
 
     </div>
     <div class="staffIrenaPodlahova">
+        <div>
         <img src="img/IrenaPodlahova.png" alt="Irena Podlahová" title="Irena Podlahová"> 
+        </div>
         <div>
 
             <h3>Irena Podlahová</h3>
