--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="bannerRight">
                         <span>Dovolená od 2. do 9. září</span>
                     
-                        <a href="#">Více informací</a>
+                        <a href="aktuality.html">Více informací</a>
                     </div>
                 </div>
             
