--- a/registrace.html
+++ b/registrace.html
@@ -144,7 +144,7 @@
 
             </div>
 
-            <img src="#" alt="teddy" title="teddy">
+            <img src="/img/" alt="teddy" title="teddy">
 
         </section>
         <div footerSignature>
