--- a/index.html
+++ b/index.html
@@ -152,7 +152,9 @@
   <section class="doctorsOffice">
         
     <div class="officeHeading">
+        
         <h2>Naše ordinace</h2>
+
         <div>
             <a href="registrace.html" title="Registrace miminka" aria-label="Registrace miminka">Registrace miminka</a>
         </div>
@@ -191,7 +193,7 @@
     <div class="staffContainer">
     <div class="staffJanaMatejkova">
         <img src="img/MUDrJanaMatejkova.png" alt="MUDr. Jana Matějková" title="MUDr. Jana Matějková">
-        <div>
+        <div class="janaMatejkovaParagraph">
 
             <h3>MUDr. Jana Matějková</h3>
             <p>Více než 23 let jsem působila v Nemocnici Písek. V průběhu let jsem pracovala jako vedoucí nedonošeneckého oddělení, zástupce primáře dětského oddělení a vedla jsem endokrinologickou a diabetologickou poradnu. Svým pacientům naslouchám, řídím se postupy západní medicíny a ráda používám selský rozum. Jsem aktivním člověkem a hlavně spokojenou babičkou.</p>
@@ -199,9 +201,8 @@
 
     </div>
     <div class="staffIrenaPodlahova">
-        <div>
-        <img src="img/IrenaPodlahova.png" alt="Irena Podlahová" title="Irena Podlahová"> 
-        </div>
+
+        <img src="img/IrenaPodlahova.png" alt="Irena Podlahová" title="Irena Podlahová">
         <div>
 
             <h3>Irena Podlahová</h3>
