--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 <section class="insuranceLogoSec">
     <div class="insuranceLogo">
-        <div class="insuranceLogoContainer">
+        <div class="sliderContainer" id="insuranceContainer">
         <img src="img/VZP.svg" alt="Všeobecná zdravotní pojišťovna" title="Všeobecná zdravotní pojišťovna">
         <img src="img/VOZP.svg" alt="Vojenská zdravotní pojišťovna" title="Vojenská zdravotní pojišťovna">
         <img src="img/Čpzp.svg" alt="Česká průmyslová zdravotní pojišťovna" title="Česká průmyslová zdravotní pojišťovna">
@@ -219,8 +219,9 @@
 
 <section class="photoSlider">
 
-    <div class="sliderContainer">
-        <div class="slider" data-cycle-fx="scrollHorz" data-cycle-timeout="0" data-cycle-pager=".pager">
+    <section class="photoSlider">
+    <div class="photoSliderContainer">
+        <div class="sliderContainer" id="photoSliderContainer">
             <img src="img/CekarnaPacient.png" alt="#">
             <img src="img/Cekarna.png" alt="#">
             <img src="img/CekarnaObrazky.png" alt="#">
@@ -230,6 +231,7 @@
         </div>
         <div class="pager"></div>
     </div>
+</section>
 
 </section>
 
@@ -266,6 +268,7 @@
 
     <p>Rozdělujeme ordinační hodiny tak, abychom nemíchali zdravé pacienty s nemocnými a předešli tak přenosu nemocí. Děkujeme Vám, že to respektujte a pomáháte nám chránit ostatní pacienty.</p>
 
+    <div class="sliderContainer">
     <table class="bigScreenTable">
         <thead>
           <tr class="odd">
@@ -314,7 +317,7 @@
           </tr>
         </tbody>
     </table>
-
+    </div>
      
 
 </section>
@@ -607,7 +610,7 @@
 
     </div>
     
-    <div class="ordinancePhoto">
+    <div class="sliderContainer" id="ordinancePhoto">
 
         <div class="ordinancePlace1"><img src="img/BudovaZvenku .png" alt=""></div>
         <div class="ordinancePlace2"><img src="img/ordinaceVchod.png" alt=""></div>
