--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
         </div>
         <div class="contactContainerEmail">
 
-            <img class="postIcon" src="img/Email.svg" alt="post symbol ">
+            <img class="postIconContact" src="img/Email.svg" alt="post symbol ">
             <a href="#" title="Napsat email" aria-label="Napsat email">email@matejkova.cz</a>
 
         </div>
@@ -582,7 +582,8 @@
                     <li>nahlášení změny telefonního kontaktu</li>
                     <li>nahlášení změny zdravotní pojišťovny</li>
                 </ul>
-            <p>Na váš mail odpovíme. Mailem nelze řešit akutní stav. Stejně tak nemůžeme komunikovat v době nepřítomnosti v ordinaci. Děkujeme za pochopení.</p>
+                
+                <p>Na váš mail odpovíme. Mailem nelze řešit akutní stav. Stejně tak nemůžeme komunikovat v době nepřítomnosti v ordinaci. Děkujeme za pochopení.</p>
     
         </div>
 
