--- a/cenik.html
+++ b/cenik.html
@@ -99,6 +99,7 @@
             <div class="priceListContainer">
                 <h1>Ceník výkonů</h1>
                 <h5>Ceník výkonů nehrazených zdravotní pojišťovnou</h5>
+                <div class="sliderContainer">
                 <table class="priceList">
                     <tbody>
                         <tr class="odd">
@@ -171,15 +172,17 @@
                         </tr>
                     </tbody>
                 </table>
-                <span>Platnost od 27. 1. 2020 — Okresní sdružení praktických lékařů pro děti a dorost</span>
+                </div>
+                <span class="validity">Platnost od 27. 1. 2020 — Okresní sdružení praktických lékařů pro děti a dorost</span>
 
             </div>
-
-            <img src="#" alt="boat" title="boat">
-
+            
         </main>
 
-        <div footerSignature>
+        <div class="footerSignature">
+            <div>
+            <img class="steamer" src="img/parnik.png" alt="boat" title="boat">
+            </div>
             <a class="marathonSign" href="#">Webdesign Marahon Studio</a>
         </div>
 
