--- a/registrace.html
+++ b/registrace.html
@@ -155,7 +155,7 @@
             <img class="pedoBear" src="img/Teddy.png" alt="teddy" title="teddy">
 
         </section>
-        <div footerSignature>
+        <div class="footerSignature" >
             <a class="marathonSign" href="#">Webdesign Marahon Studio</a>
         </div>
 
