--- a/vybaveni.html
+++ b/vybaveni.html
@@ -143,7 +143,7 @@
 </div>
 
 </main>
-<div footerSignature>
+<div class="footerSignature">
     <a class="marathonSign" href="#">Webdesign Marahon Studio</a>
 </div>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
